k8s/app/deployment.yaml
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: netflix-demo
  labels:
    app: netflix-demo
    release: primary
spec:
  selector:
    matchLabels:
      app: netflix-demo
      release: primary
  template:
    metadata:
      labels:
        app: netflix-demo
        release: primary
    spec:
      containers:
      - name: netflix-demo
        image: aashishk7/demo-app:0.0.1
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /
            port: 8080
        readinessProbe:
          httpGet:
            path: /
            port: 8080
        resources:
            limits:
              cpu: 100m
              memory: 50Mi
            requests:
              cpu: 50m
              memory: 20Mi
