k8s/app/istio.yaml
---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: twflix-microservice
spec:
  hosts:
  - twflix-microservice.acme.com
  - twflix-microservice
  gateways:
  - twflix-microservice
  http:
  - route:
    - destination:
        host: twflix-microservice
        subset: primary
        port:
          number: 80

---

apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: twflix-microservice
spec:
  host: twflix-microservice
  subsets:
  - name: primary
    labels:
      release: primary

---

apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: twflix-microservice
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - twflix-microservice.acme.com
